--- a/packages/frontend/public/index.html
+++ b/packages/frontend/public/index.html
@@ -24,7 +24,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Tienda Sol</title>
+    <link rel="icon" href="/images/icons8-tienda-48.png" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
